hphp/test/zend/bad/ext/spl/tests/SplFixedArray_fromarray_param_multiarray.php
<?php
$array = SplFixedArray::fromArray(array(array('1')));
var_dump($array);
?>